tests/paczka1/small_fuzzy/37305047.err
Error in line 1: gQ7cP S580 67,7
Error in line 6: ZlXJuu S580 48,9
Error in line 3: JW9kKve1KA A557 96,0
Error in line 11: JW9kKve1KA S999 53,3
